--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,29 @@
-/* Navigation styles */
+/* Styles for the full page */
+body {
+  margin: 0;
+}
 
+/* Navigation styles */
+.nav {
+  display: flex;
+  justify-content: space-around;
+}
+
+.center {
+  flex-direction: row;
+  align-items: center;
+}
 /* Column styles */
+.column {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+}
 
 /* Footer Styles */
+
+.footer {
+  display: flex;
+  justify-content: center;
+}
