--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,15 @@ body {
   margin: 0;
 }
 
+a {
+  color: white;
+}
+
 /* Navigation styles */
 .nav {
   display: flex;
   justify-content: space-around;
+  background-color: black;
 }
 
 .center {
@@ -16,9 +21,20 @@ body {
 /* Column styles */
 .column {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
+}
+
+.meal1 {
+  width: 33%;
+}
+
+.meal2 {
+  width: 33%;
+}
+
+.meal3 {
+  width: 33%;
 }
 
 /* Footer Styles */
@@ -26,4 +42,5 @@ body {
 .footer {
   display: flex;
   justify-content: center;
+  background-color: black;
 }
